# LivingWorld-Story-Generator

./: .env  .env.example  CLAUDE.md  DATABASE_INDEX_ANALYSIS.md  ERROR_MESSAGE_GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  VALIDATION_SUMMARY.md  main.py  pyproject.toml
.claude/agents/: character-agent-designer.md  database-schema-manager.md  story-narrative-analyst.md  story-prompt-architect.md  test-generator.md
ai_docs/: story_example.txt  system_prompt_changes.md  system_prompt_review.md
docs/: AGENT_API_REFERENCE.md  INTERNAL_MONOLOGUE.md  LANGCHAIN_AGENTS.md  RACE_CONDITION_FIXES.md
prompts/: system_prompt.txt
src/agents/: agent_factory.py  agent_tools.py  character_agent.py
src/cli/: interface.py
src/core/: config.py  constants.py  exceptions.py  logging_config.py  validation.py
src/database/: connection.py  migrate.py  models.py
src/database/migrations/: add_character_relationships.py  add_performance_indexes.py  v001_initial_schema.sql
src/embeddings/: encoder.py  search.py
src/llm/: ollama_client.py  prompt_builder.py  story_generator.py
src/story/: context.py  io.py  state.py
tests/: conftest.py  test_agents.py  test_embeddings.py  test_langchain_agents.py  test_story_generator.py  test_story_io.py
